--- a/src/styles/less/index.less
+++ b/src/styles/less/index.less
@@ -126,6 +126,22 @@ body {
     }
 }
 
+.backBtn {
+    background-color: inherit;
+    border: none;
+    position: fixed;
+    top: 10px;
+    left: 8px;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+    text-transform: uppercase;
+    z-index: 10;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
 #labelTitle {
     font-size: 20px;
     color: @gray-text;
